# otus_cpp_homeworks

./: .gitignore  ApplicationController_8h.html  ApplicationController_8h__dep__incl.map  ApplicationController_8h__dep__incl.md5  ApplicationController_8h__incl.map  ApplicationController_8h__incl.md5  ApplicationController_8h_source.html  BaseUI_8h.html  BaseUI_8h__dep__incl.map  BaseUI_8h__dep__incl.md5  BaseUI_8h__incl.map  BaseUI_8h__incl.md5  BaseUI_8h_source.html  CMakeLists.txt  CanvasData_8h.html  CanvasData_8h__dep__incl.map  CanvasData_8h__dep__incl.md5  CanvasData_8h__incl.map  CanvasData_8h__incl.md5  CanvasData_8h_source.html  Canvas_8h.html  Canvas_8h__dep__incl.map  Canvas_8h__dep__incl.md5  Canvas_8h__incl.map  Canvas_8h__incl.md5  Canvas_8h_source.html  Doxyfile  Drawer_8h.html  Drawer_8h__dep__incl.map  Drawer_8h__dep__incl.md5  Drawer_8h__incl.map  Drawer_8h__incl.md5  Drawer_8h_source.html  Drawing_8h.html  Drawing_8h__dep__incl.map  Drawing_8h__dep__incl.md5  Drawing_8h__incl.map  Drawing_8h__incl.md5  Drawing_8h_source.html  GraphicalPrimitives_8h.html  (+250 more)
.github/workflows/: release.yml
cmake/: utils.cmake
docs/: CNAME  index.md
helloworld/: CMakeLists.txt
ip_filter/: CMakeLists.txt  ip_filter.cpp  ip_filter.h  main.cpp  utils.h
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+24 more)
src/: CMakeLists.txt  Server.h  Storage.h  StorageCommand.h  SynchronizedQueue.h  TableName.h  Utils.h  externalSorting.h  main.cpp  mapreduce.h
src/Application/: ApplicationController.h
src/Drawing/: Drawer.h  IPointDrawer.h
src/Models/: CanvasData.h  Drawing.h  GraphicalPrimitives.h  Serialization.h
src/Serialization/: Serialization.h
src/UI/: BaseUI.h  Canvas.h
src/async/: CMakeLists.txt  ContextManager.h  async.cpp  async.h
src/bulking/: BulkAggregator.h  CMakeLists.txt  CommandBulk.h  InputProcessor.h
tests/: CMakeLists.txt  test_ip_filter.cpp  test_version.cpp
